--- a/app/views/fnfps/index.html.erb
+++ b/app/views/fnfps/index.html.erb
@@ -23,7 +23,7 @@
                        feature_str += feature["feature"]+" x "+feature.occurrence+"     ";
                    }
                });
-               $("#<%= fnfp.post_id %>").after("<tr><td></td><td></td><td>" + feature_str + "</td></tr>");
+               $("#<%= fnfp.post_id %>").after("<tr><td></td><td></td><td></td><td>" + feature_str + "</td></tr>");
            });
        })
     </script>
