--- a/app/views/fnfps/index.html.erb
+++ b/app/views/fnfps/index.html.erb
@@ -6,6 +6,7 @@
     <th>Tag</th>
     <th>Flag</th>
     <th>content</th>
+    <th>Change</th>
   </tr>
 
 <% @fnfps.each do |fnfp| %>
@@ -13,7 +14,8 @@
     <td><%= fnfp.post_id %></td>
     <td><%= fnfp.tag_id %></td>
     <td><%= fnfp.flag %></td>
-    <td><%= fnfp.content %></td>
+    <td><%= fnfp.content %>
+    <td><button class="btn btn-success" onclick="change(<%= fnfp.post_id %>,<%= fnfp.tag_id %>,<%= fnfp.flag %>)">change</button></td>
     <script>
        $(document).ready(function(){
            $.get("/posts/get_features?post_id=<%= fnfp.post_id %>").success(function(data){
@@ -23,9 +25,21 @@
                        feature_str += feature["feature"]+" x "+feature.occurrence+"     ";
                    }
                });
-               $("#<%= fnfp.post_id %>").after("<tr><td></td><td></td><td></td><td>" + feature_str + "</td></tr>");
+               $("#<%= fnfp.post_id %>").after("<tr style='border-bottom: 1px solid black;'><td></td><td></td><td></td><td>" + feature_str + "</td></tr>");
            });
-       })
+       });
+
+       function change(post_id,tag_id,flag){
+           $.ajax({
+               type: "POST",
+               url: "posts/change",
+               data: {post_id: post_id, tag_id: tag_id, flag: flag},
+               success: function (data) {
+                    alert("change finish");
+                   console.log(data);
+               }
+           });
+       };
     </script>
   </tr>
 <% end %>
