--- a/app/views/fnfps/index.html.erb
+++ b/app/views/fnfps/index.html.erb
@@ -45,11 +45,16 @@
 
 <script  type="text/javascript">
     function change(post_id,tag_id,flag){
+        e = e || window.event;
+        var src = e.srcElement || e.target;
+        src.textContent = "Loading";
+        src.disabled = true;
         $.ajax({
             type: "POST",
             url: "posts/change",
             data: {post_id: post_id, tag_id: tag_id, flag: flag},
             success: function (data) {
+                src.textContent = "Finish";
                 console.log(data);
             }
         });
