--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,8 +13,28 @@
 		<ul class="wat-cf" style="margin-top: 10px;">
 			<li><a href="/tags">Tags</a></li>
 			<li><a href="/posts">Posts</a></li>
+            <button type="button" class="btn btn-danger" onclick="sync()" style="float: right;">
+              <div class="desc">同步Redis</div>
+              <img class="loading" src="/loading_icon2.gif" style="width: 15px;"/>
+            </button>
 		</ul>
 	</div>
     <%= yield %>
 </body>
+<script type="text/javascript">
+  $('.loading').hide();
+  function sync(){
+      $('.desc').hide();
+      $('.loading').show();
+      $.ajax({
+          type: "POST",
+          url: "tags/sync",
+          dataType: "json",
+          success: function (data) {
+            $('.loading').hide();
+            $('.desc').show();
+          }
+      });
+  }
+</script>
 </html>
