--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
 		<ul class="wat-cf" style="margin-top: 10px;">
 			<li><a href="/tags">Tags</a></li>
 			<li><a href="/posts">Posts</a></li>
+          <li><a href="/tags/test">Test</a></li>
             <button type="button" class="btn btn-danger" id="syncbutton" onclick="sync()" style="float: right;">
               <div class="desc">同步Redis</div>
               <img class="loading" src="/loading_icon2.gif" style="width: 15px;"/>
