--- a/app/views/tags/test.html.erb
+++ b/app/views/tags/test.html.erb
@@ -3,7 +3,7 @@
       <select id="type">
         <option value="topic_id">Topic Id</option>
         <option value="post_id">Post Id</option>
-        <option value="content">Content</option>
+        <option value="content" selected="selected">Content</option>
       </select>
     </div>
 
