--- a/app/views/tags/index.html.erb
+++ b/app/views/tags/index.html.erb
@@ -27,8 +27,8 @@
   <% @tags.each do |tag| %>
       <tr id="<%= tag['tag_id'] %>">
         <td><input type="checkbox" class="select_tag" value="<%= tag['tag_id'] %>"> <%= tag['tag_id'] %></td>
-        <td name="local_prior"><%= tag['prior'].to_f.round(4) %></td>
-        <td name="redis_prior"><%= @redis_prior[tag['tag_id']].round(4) %></td>
+        <td name="local_prior"><%= tag['prior'].to_f.round(4) if(tag['prior'])%></td>
+        <td name="redis_prior"><%= @redis_prior[tag['tag_id']].round(4) if(@redis_prior[tag['tag_id']])%></td>
         <td name="f"><%= tag['f'] %></td>
         <td name="precise"><%= tag['precise'] %></td>
         <td name="recall"><%= tag['recall'] %></td>
