--- a/public/public/qubico.css
+++ b/public/public/qubico.css
@@ -356,6 +356,11 @@ a:focus,
     font-size:14px;
 }
 
+.dropdown a {
+    text-align: right;
+    font-weight:200px;
+}
+
 .site-logo {
     max-height:54px;
 }
@@ -639,6 +644,7 @@ a:focus,
 }
 
 .services p {
+    text-align: left;
     padding:0 20px;
     font-size:16px;
     line-height:21px;
@@ -2016,4 +2022,8 @@ a:focus,
         margin:0 auto 40px;
         max-width:400px;
     }
+}
+
+.form-group label {
+    font-size: 13px;
 }
