--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,9 @@
   <%= stylesheet_link_tag "application" %>
   <%= stylesheet_link_tag "bootstrap.min" %>
   <%= javascript_include_tag "jquery-1.8.2.min" %>
+  <%= javascript_include_tag "nv.d3" %>
+  <%= javascript_include_tag "d3" %>
+  <%= stylesheet_link_tag "nv.d3" %>
 
 </head>
 <body>
