--- a/app/views/topicshow/detect_show.html.erb
+++ b/app/views/topicshow/detect_show.html.erb
@@ -15,6 +15,8 @@
     .detect-table {
         margin-top: 30px;
         margin-bottom: 30px;
+        height: 500px;
+        overflow-y: scroll;
     }
 
     .thread_titles_div {
@@ -42,10 +44,6 @@
     <input type="text" class="form-control" id="scopeInput" placeholder="enter scope" value="<%= params['scope'] %>">
   </div>
   <div class="form-group">
-    <label for="keywordInput">keyword:</label>
-    <input type="text" class="form-control" id="keywordInput" placeholder="only one word" value="<%= params['keyword'] %>">
-  </div>
-  <div class="form-group">
     <label for="startInput">start:</label>
     <input type="text" class="form-control" id="startInput" placeholder="like 2015-01-01" value="<%= params['start'] %>">
   </div>
@@ -55,6 +53,7 @@
   </div>
 
   <button type="submit" id="detection" class="btn btn-default" onclick="beginDetectionTopic()">Topic Detect</button>
+  <button type="submit" id="showSvg" class="btn btn-default" onclick="showSvg()">Show SVG</button>
   <!--</form>-->
 </div>
 <div class="detect-table">
@@ -89,5 +88,11 @@
     function toggle_thread_titles() {
         console.log("aaa");
         $(event.currentTarget).parent().find('.thread_titles_div').toggle();
+    }
+
+    function showSvg() {
+        console.log('aaaaaa');
+        var url = "/topicshow/topic_svg_show?scope=" + $('#scopeInput').val() + "&keyword=" + $('#keywordInput').val() + "&start="+ $('#startInput').val() + "&end=" + $('#endInput').val();
+        window.location.href = url;
     }
 </script>
