--- a/app/assets/stylesheets/topic_show.css
+++ b/app/assets/stylesheets/topic_show.css
@@ -1,8 +1,8 @@
 body {
   font: 300 36px "Helvetica Neue";
   height: 640px;
-  margin: 80px 160px 80px 160px;
-  overflow: hidden;
+  margin: 80px 60px 80px 60px;
+  /*overflow: hidden;*/
   position: relative;
   /*width: 960px;*/
 }
